GNOME Bugzilla – Bug 733303
lua-factory: GrlMediaBoxes cannot have their metadata resolved
Last modified: 2014-07-22 06:36:31 UTC
.
Created attachment 280944 [details] [review] lua-factory: GrlMediaBoxes cannot have their metadata resolved Unless the resolver handles every media type.
Review of attachment 280944 [details] [review]: Looks fine.
Attachment 280944 [details] pushed as ceb9d74 - lua-factory: GrlMediaBoxes cannot have their metadata resolved