lua-factory: GrlMediaBoxes cannot have their metadata resolved

Unless the resolver handles every media type.

https://bugzilla.gnome.org/show_bug.cgi?id=733303